# QCA6574-3.14-source-code

meta-qti-connectivity/classes/: agl-wifi.bbclass  qcacld-20-common.bbclass  signature.bbclass
meta-qti-connectivity/conf/: layer.conf  standalone-bbmask.conf
meta-qti-connectivity/conf/machine/: 8x96connx.conf
meta-qti-connectivity/recipes-connectivity/wlan-config/: wlan-config_git.bb
meta-qti-connectivity/recipes-connectivity/wlan-driver/: qcacld-20-common.inc  qcacld-hl_2.0.bb  qcacld-ll_2.0.bb
meta-qti-connectivity/recipes-connectivity/wlan-sigmadut/: wlan-sigmadut.bb
meta-qti-connectivity/recipes-connectivity/wpa-supplicant/: wpa-supplicant_git.bb
meta-qti-connectivity/recipes-core/busybox/: busybox_%.bbappend
meta-qti-connectivity/recipes-core/systemd/: systemd_%.bbappend
meta-qti-connectivity/recipes-kernel/linux-kernel/: linux-imx_%.bbappend  linux-imx_3.10.17.bbappend  linux-imx_3.14.28.bbappend  linux-msm-4.4_git.bbappend
meta-qti-connectivity/recipes-kernel/linux-libc-headers/: linux-libc-headers_%.bbappend
meta-qti-connectivity/recipes-kernel/lk/: lk_git.bbappend
meta-qti-connectivity/recipes-products/images/: QCA6574AULE221-image.inc  QCA6584AULE201-image.inc  automotive-connx-image.bb  standalone-auto-image.bb  standalone-imx8auto-image.bb
meta-qti-connectivity/scripts/: extract_sourcecode.sh  prepare_agl_dual_wifi.sh  prepare_sdk_3.10.17_os.sh  prepare_sdk_3.14.28_os.sh  prepare_sdk_4.1.15_os.sh  prepare_sdk_4.14.78_os.sh  prepare_sdk_4.9.11_os.sh  prepare_sdk_os.sh  set_agl_env.sh  set_bb_env.sh  set_imx8_env.sh  update_bblayers.sh  update_dualwifi_ini.sh  update_firmware.sh
meta-qti-connectivity/scripts/files/: 0001-poky-fix-KW-build-issue.patch
wlan-opensource/dsrc-tool/: NOTICE
wlan-opensource/dsrc-tool/dsrc/: Makefile  README.md  dsrc_config.c  dsrc_dcc.c  dsrc_diag.c  dsrc_rx.c  dsrc_set_chan.c  dsrc_tx.c  install.sh  strlcpy.c  wlan_ts.c
wlan-opensource/mdm-init/: Makefile.am  configure.ac
wlan-opensource/mdm-init/wlan_qcs8250/: Makefile.am
wlan-opensource/mdm-init/wlan_sdm845_robot/: Makefile.am  WCNSS_cfg.sdio.ini  WCNSS_qcom_cfg.ini  wlan  wpa_supplicant.conf
wlan-opensource/mdm-init/wlan_sdxlemur/: Makefile.am  WCNSS_qcom_cfg.ini  hostapd-wlan1.conf  hostapd-wlan2.conf  hostapd.conf  sta_mode_hostapd.conf
wlan-opensource/mdm-init/wlan_sdxpoorwills/: WCNSS_qcom_cfg.ini
wlan-opensource/mdm-init/wlan_sdxprairie/: WCNSS_qcom_cfg.ini  hostapd-wlan1.conf  hostapd-wlan2.conf  hostapd.conf  sta_mode_hostapd.conf  start_cnss_le
wlan-opensource/mdm-init/wlan_standalone/: Makefile.am  QCA6574AU.LE.2.2.1_Rome_PCIe_qcacld-2.0.ini  QCA6574AU.LE.2.2.1_Rome_PCIe_qcacld-3.0.ini  QCA6574AU.LE.2.2.1_Rome_SDIO_qcacld-2.0.ini  QCA6574AU.LE.2.2.1_Rome_SDIO_qcacld-3.0.ini  QCA6574AU.LE.2.2.1_Tufello_SDIO_qcacld-2.0.ini  QCA6574AU.LE.2.2.3_Rome_PCIe_qcacld-3.0.ini  QCA6574AU.LE.2.x_Rome_PCIe_qcacld-3.0-iMX8.ini  QCA6595.LE.0.1_Genoa_PCIe_qcacld-3.0-iMX8.ini  QCA6696.LE.0.1_Hasting_PCIe_qcacld-3.0-iMX8.ini
wlan-opensource/sigma-dut/: dpp.c  sigma_dut.c  sta.c
(+74 files in other folders)
